--- a/index.html
+++ b/index.html
@@ -273,6 +273,7 @@
             // JAN 27
             {
                 q: "Exact Trig: Calculate the area of a triangle with sides $6\\text{cm}$, $8\\text{cm}$ and angle $30^\\circ$ between them.",
+                img: "images/triangle_area.png",
                 steps: ["Formula: Area = $\\frac{1}{2}ab\\sin C$.", "Sub: $\\frac{1}{2} \\times 6 \\times 8 \\times \\sin(30)$.", "Recall $\\sin(30) = 0.5$.", "$24 \\times 0.5$.", "Final Answer: $$12 \\text{ cm}^2$$"]
             },
             // JAN 28
@@ -303,6 +304,7 @@
             // FEB 2
             {
                 q: "Quadratic Inequality: Solve $x^2 - 9 > 0$.",
+                img: "quadratic_inequality.PNG",
                 steps: ["Factorise: $(x-3)(x+3) > 0$.", "Critical values: $3, -3$.", "Sketch U-shape parabola.", "Where is it ABOVE axis?", "Final Answer: $$x > 3 \\text{ or } x < -3$$"]
             },
             // FEB 3
@@ -332,7 +334,8 @@
             },
             // FEB 8
             {
-                q: "Geometry: Exterior angle of a regular polygon is $18^\\circ$. How many sides?",
+                q: "Geometry: Exterior angle of a regular polygon is $18^\\circ$. How many sides does the polygon have?",
+                img: "exterior_angle.PNG",
                 steps: ["Formula: Sum of exterior angles = $360^\\circ$.", "$n = 360 \\div 18$.", "Calculation.", "Final Answer: $$20 \\text{ sides}$$"]
             },
             // FEB 9
@@ -373,6 +376,7 @@
             // FEB 16
             {
                 q: "Arc Length: Sector angle $60^\\circ$, Radius 6cm.",
+                img: "arc_length.PNG",
                 steps: ["Fraction: $\\frac{60}{360} = \\frac{1}{6}$.", "Circumference: $\\pi d = 12\\pi$.", "Calc: $\\frac{1}{6} \\times 12\\pi$.", "Final Answer: $$2\\pi$$"]
             },
             // FEB 17
@@ -423,11 +427,13 @@
             // FEB 26
             {
                 q: "Circle Theorems: Cyclic Quadrilateral ABCD. Angle A = $80^\\circ$. Angle C?",
+                    img: "cyclic_quad.png",
                 steps: ["Opposite angles sum to $180^\\circ$.", "$180 - 80$.", "Final Answer: $$100^\\circ$$"]
             },
             // FEB 27
             {
                 q: "Inequality Region: $y > x$ and $x + y < 4$. Describe test point $(1,1)$.",
+                    img: "region.PNG",
                 steps: ["Is $1 > 1$? No. (On line, not in region).", "Is $1 + 1 < 4$? Yes.", "Overall?", "Final Answer: $$\\text{Not in region}$$"]
             },
             // FEB 28
