--- a/igcse.html
+++ b/igcse.html
@@ -256,7 +256,11 @@
 
         // --- DATA: 31 QUESTIONS (2025 SYLLABUS) ---
        const problemBank = [
-           
+            // JAN 30
+            {
+                q: "Find the volume of a sphere with radius 3cm.",
+                steps: ["Formula: $\\frac{4}{3}\\pi r^3$.", "$\\frac{4}{3}\\pi (27)$.", "$4 \\times 9\\pi$.", "Final Answer: $$36\\pi$$"]
+            },
             // JAN 31
             {
                 q: "Algebraic Proof: Show that the sum of 3 consecutive integers is a multiple of 3.",
