--- a/igcse.html
+++ b/igcse.html
@@ -440,7 +440,7 @@
     			"img": "",
     			"steps": [
       			"$\\frac{60+x}{6}=9$",
-      			"$60+x=54$"
+      			"$60+x=54$",
       			"Final answer: $$x=-6$$"
     			]
   			},
@@ -489,8 +489,8 @@
     			"q": "Factorise $30x^2+9x-3$",
     			"img": "",
     			"steps": [
-      			"$30x^2+9x-3\\equiv 3(10x^2+3x-1)$
-      			"$10\times-1=-10$",
+      			"$30x^2+9x-3\\equiv 3(10x^2+3x-1)$"
+      			"$10\\times-1=-10$",
       			"Factors of $-10$ that sum to $3$ are $5$ and $-2$",
       			"Express $3x$ as $5x-2x$ so $3(10x^2+5x-2x-1$",
       			"Factorise in pairs: $3(5x(2x+1)-1(2x+1)$",
