--- a/igcse.html
+++ b/igcse.html
@@ -277,7 +277,8 @@
   			},
 			//2 Feb
   			{
-    			"q": "The diagram shows two parallel lines intersecting two straight lines.\nFind the values of a, b and c",
+    			"q": `The diagram shows two parallel lines intersecting two straight lines.
+				Find the values of a, b and c`,
     			"img": "images/feb_2.png",
     			"steps": [
       			"a = 143° (corresponding angles are equal).",
@@ -288,7 +289,8 @@
   			},
 			//3 Feb
   			{
-    			"q": "Jade invests €18000 at 5.25% per year compound interest.\nFind the value of her investment at the end of 10 years.\nGive your answer to the nearest ten thousand Euros.",
+    			"q": `Jade invests €18000 at 5.25% per year compound interest.\nFind the value of her investment at the end of 10 years.
+				Give your answer to the nearest ten thousand Euros.`,
     			"img": "",
     			"steps": [
       			"$18000(1 + \\frac{5.25}{100})^{10}$",
@@ -299,7 +301,8 @@
   			},
 			//4 Feb
   			{
-    			"q": "A regular polygon has an interior angle of 165°.\nHow many sides does it have?",
+    			"q": `A regular polygon has an interior angle of 165°.
+				How many sides does it have?`,
     			"img": "",
     			"steps": [
       			"$180° - 165° = 15°$", 
@@ -322,9 +325,9 @@
   			},
 			//6 Feb
   			{
-			    "q": "Consider the right angled triangle below:
-			\n a) Calculate the length of AB
-			\n b) Calculate the size of angle BAC",
+			    "q": `Consider the right angled triangle below:
+				a) Calculate the length of AB
+			 	b) Calculate the size of angle BAC`,
     			"img": "feb_6.png",
     			"steps": [
       			"a) AB $= \\sqrt{20^2 + 7^2}$",
@@ -335,11 +338,11 @@
   			},
 			//7 Feb
   			{
-    			"q": "Consider the Venn diagram below.  The number in the universal set is 50.
-				\n $n(A)=32, n(B)=28, n(A \\cup B)' = 8$.
-				\n Find:
-				\n a) $n(A \\cap B)$
-				\n b) $n(A' \\cap B)$ ",
+    			"q": `Consider the Venn diagram below.  The number in the universal set is 50.
+				$n(A)=32, n(B)=28, n(A \\cup B)' = 8$.
+				Find:
+				a) $n(A \\cap B)$
+				b) $n(A' \\cap B)$`,
     			"img": "feb_7.png",            
     			"steps": [
       			"a) $A \\cup B = 50 - 8 = 42$",
@@ -351,9 +354,9 @@
   			},
 			//8 Feb
 			{
-    			"q": "Peter invests £20000 for 10 years.
-				\n At the end of the period his investment is worth £35817 (nearest pound).
-				\n Calculate the interest rate.",
+    			"q": `Peter invests £20000 for 10 years.
+				At the end of the period his investment is worth £35817 (nearest pound).
+				Calculate the interest rate.`,
     			"img": "",
     			"steps": [
       			"$20000\\left(1+\\frac{r}{100}\\right)^{10} = 35817$",
@@ -366,9 +369,9 @@
   			},
 			//9 Feb
 			{
-    			"q": "$ y = sqrt[3]{\\left(\\frac{p^7}{q^2}\\right)}$
-				\n a) Find $y$ when $p = 9$ and $q=3$.
-				\n b) Rearrange the formula to make p the subject.",
+    			"q": `$ y = sqrt[3]{\\left(\\frac{p^7}{q^2}\\right)}$
+				a) Find $y$ when $p = 9$ and $q=3$.
+				b) Rearrange the formula to make p the subject.`,
     			"img": "",
     			"steps": [
 			    "a) $ y = sqrt[3]{\\left(\\frac{9^7}{3^2}\\right)}$",
@@ -382,8 +385,8 @@
   			},
 			//10 Feb
 			{
-    			"q": "The straight line $y=3x-1$ intersects the curve $y=2x^2-3x+2 in two points.
-				\n Find the coordinates of the points of intersection giving your answer correct to 2dp.",
+    			"q": `The straight line $y=3x-1$ intersects the curve $y=2x^2-3x+2$ in two points.
+				Find the coordinates of the points of intersection giving your answer correct to 2dp.`,
    				"img": "",
     			"steps": [
       			"$2x^2-3x+2=3x-1$",
@@ -397,9 +400,9 @@
   			},
 			//11 Feb
 			{
-    			"q": "$ \\mathbf{a} = \\begin{pmatrix} 5 \\\\ -2 \\end{pmatrix}  $ \\quad $ \\mathbf{b} = \\begin{pmatrix} -7 \\\\ 9 \\end{pmatrix}  $
-				\n a) Find $\\mathbf{a}-3\\mathbf{b}$.
-				\n b) Find the exact value of $|\\mathbf{b}|$",
+    			"q": `$ \\mathbf{a} = \\begin{pmatrix} 5 \\\\ -2 \\end{pmatrix}  $ \\quad $ \\mathbf{b} = \\begin{pmatrix} -7 \\\\ 9 \\end{pmatrix}  $
+				a) Find $\\mathbf{a}-3\\mathbf{b}$.
+				b) Find the exact value of $|\\mathbf{b}|$`,
     			"img": "",
     			"steps": [
       			"a) $ \\begin{pmatrix} 5 \\\\ -2 \\end{pmatrix}  - \\begin{pmatrix} -21 \\\\ 27 \\end{pmatrix} $",
@@ -410,9 +413,9 @@
   			},
 			//12 Feb
 			{
-    			"q": "The first four terms of a sequence are $ T_1=19,T_2=13, T_3=7, T_4=1 $
-				\n a) Find $T_5$
-				\n b) Find $T_n$.",
+    			"q": `The first four terms of a sequence are $ T_1=19,T_2=13, T_3=7, T_4=1 $
+				a) Find $T_5$
+				b) Find $T_n$.`,
     			"img": "",
     			"steps": [
       			"a) Common difference: $-6$",
@@ -434,9 +437,9 @@
   			},
 			//14 Feb
 			{
-    			"q": "The arithmetic mean of five numbers is $12$.
-				\n When a sixth number, $x$ is added the mean drops to $9$.
-				\n Find $x$.",
+    			"q": `The arithmetic mean of five numbers is $12$.
+				When a sixth number, $x$ is added the mean drops to $9$.
+				Find $x$.`,
     			"img": "",
     			"steps": [
       			"$\\frac{60+x}{6}=9$",
@@ -446,8 +449,8 @@
   			},
 			//15 Feb
 			{
-    			"q": "In the diagram, below, points A, B, C and D all lie on the circumference of a circle.
-				\n Giving reasons, write down the size of $\\angle BDA, \\angle BCD and \\angle ABD$.",
+    			"q": `In the diagram, below, points A, B, C and D all lie on the circumference of a circle.
+				Giving reasons, write down the size of $\\angle BDA, \\angle BCD and \\angle ABD$.`,
     			"img": "images/feb_15.png",
     			"steps": [
       			"$\\angle BDA = 26^\\circ$ (angle in the same segment as $\\angle BCA$)",
@@ -457,8 +460,8 @@
   			},
 			//16 Feb
 			{
-    			"q": "$f(x)=3^x$
-				\n Find $x$ when $f^{-1}(x)=4$",
+    			"q": `$f(x)=3^x$
+				Find $x$ when $f^{-1}(x)=4$`,
     			"img": "",
     			"steps": [
       			"$f^{-1}(x)=4\\Rightarrow f(4)=x$",
@@ -468,10 +471,10 @@
   			},
 			// 17 Feb
 			{
-    			"q": "The diagram shows the end view of a storage unit in the shape of two congruent trapeziums.
-				\n a) Calculate the area of the end wall.
-				\n b) The length of the sloping roof (marked $x$).
-				\n c) The angle of the pitch of the roof (marked $y^\\circ$).",
+    			"q": `The diagram shows the end view of a storage unit in the shape of two congruent trapeziums.
+				a) Calculate the area of the end wall.
+				b) The length of the sloping roof (marked $x$).
+				c) The angle of the pitch of the roof (marked $y^\\circ$).`,
     			"img": "images/feb_17.png",
     			"steps": [
       			"a) Area$=2\\times\\frac{1}{2}(a+b)\\times h$",
@@ -492,7 +495,7 @@
       			"$30x^2+9x-3\\equiv 3(10x^2+3x-1)$"
       			"$10\\times-1=-10$",
       			"Factors of $-10$ that sum to $3$ are $5$ and $-2$",
-      			"Express $3x$ as $5x-2x$ so $3(10x^2+5x-2x-1$",
+      			"Express $3x$ as $5x-2x$ so $3(10x^2+5x-2x-1$)",
       			"Factorise in pairs: $3(5x(2x+1)-1(2x+1)$",
       			"Final answer: $$3(5x-1)(2x+1)$$"
     			]
@@ -511,11 +514,11 @@
   			},
 			//20 Feb
 			{
-  				"q": "A cuboid is constructed to hold a single metal rod.
-				\n Its dimensions are length 6cm, width 4cm and height 2.5cm.
-				\n The rod fits exactly in the box without bending between the bottom left front corner and the top right back corner.
-				\n a) Calculate the length of the rod correct to 3 sf.
-				\n b) Calculate the angle the rod makes with the horizontal base of the cuboid correct to 1dp",
+  				"q": `A cuboid is constructed to hold a single metal rod.
+				Its dimensions are length 6cm, width 4cm and height 2.5cm.
+				The rod fits exactly in the box without bending between the bottom left front corner and the top right back corner.
+				a) Calculate the length of the rod correct to 3 sf.
+				b) Calculate the angle the rod makes with the horizontal base of the cuboid correct to 1dp`,
   				"img": "",
   				"steps": [
     			"a) Length of rod $= \\sqrt{6^2+4^2+2.5^2}$",
@@ -527,9 +530,9 @@
 			},
 			//21 Feb
 			{
-  				"q": "$y$ is inversely proportional to $\\sqrt{x+6}$.
-				\n When $y=100$, $x=10$.
-				\n Find $x$ when $y=40$",
+  				"q": `$y$ is inversely proportional to $\\sqrt{x+6}$.
+				When $y=100$, $x=10$.
+				Find $x$ when $y=40$`,
   				"img": "",
   				"steps": [
     			"$y \\propto \\frac{1}{\\sqrt{x+6}} \\Rightarrow y=\\frac{k}{\\sqrt{x+6}}$",
@@ -561,9 +564,9 @@
     			"steps": [
       			"$1\\frac{3}{8}\\times2\\frac{2}{5}$",
       			"$=\\frac{11}{8}\\times\\frac{12}{5}$",
-      			"$=\\frac{11\\times3}{2\\times5}",
+      			"$=\\frac{11\\times3}{2\\times5}$",
       			"$=\\frac{33}{10}$",
-      			"Final answer: 3\\frac{3}{10}"
+      			"Final answer: $$3\\frac{3}{10}$$"
     			]
   			},
 			//24 Feb
@@ -574,14 +577,14 @@
       			"$24=2^3\\times3$",
       			"$84=2^2\\times3\\times7$",
       			"LCM $=2^3\\times3\\times7$",
-      			"Final answer: 168"
+      			"Final answer: $$168$$"
     			]
   			},
 			//25 Feb
 			{
-  				"q": "Solve the simultaneous equations:
-				\n$3x+7y=22$
-				\n$5x-3y=22$",
+  				"q": `Solve the simultaneous equations:
+				$3x+7y=22$
+				$5x-3y=22$`,
   				"img": "",
   				"steps": [
     			"Eq1: $3x+7y=22$, Eq2: $5x-3y=22$",
@@ -590,15 +593,15 @@
     			"$\\Rightarrow x=5$",
     			"Substitute $x=5$ into Eq1: $3(5)+7y=22$",
     			"$\\Rightarrow 15+7y=22 \\Rightarrow y=1$",
-    			"Final answer: $x=5, y=1$"
+    			"Final answer: $$x=5, y=1$$"
   				]
 			},
 
 			//26 Feb
 			{
-    			"q": "Consider the expressions:
-				\n $9a^2bc^2, 6a^4b^2c^4 \\text{and} 15a^6b^3c$
-				\n Write down a) the HCF, b) the LCM",
+    			"q": `Consider the expressions:
+				$9a^2bc^2, 6a^4b^2c^4 \\text{and} 15a^6b^3c$
+				Write down a) the HCF, b) the LCM`,
 			    "img": "",
     			"steps": [
       			"a) HCF $= 3a^2bc$",
@@ -618,8 +621,8 @@
 
 			//28 Feb
 			{
-  				"q": "Simplify
-				\n$\\frac{6x^2-7x-3}{9x^2-1}$",
+  				"q": `Simplify
+				$\\frac{6x^2-7x-3}{9x^2-1}$`,
   				"img": "",
   				"steps": [
     			"$6x^2-7x-3 = 6x^2-9x+2x-3$",
