--- a/igcse.html
+++ b/igcse.html
@@ -496,7 +496,7 @@
       			"$10\\times-1=-10$",
       			"Factors of $-10$ that sum to $3$ are $5$ and $-2$",
       			"Express $3x$ as $5x-2x$ so $3(10x^2+5x-2x-1$)",
-      			"Factorise in pairs: $3(5x(2x+1)-1(2x+1)$",
+      			"Factorise in pairs: $3(5x(2x+1)-1(2x+1))$",
       			"Final answer: $$3(5x-1)(2x+1)$$"
     			]
   			},
