--- a/igcse.html
+++ b/igcse.html
@@ -492,7 +492,7 @@
     			"q": "Factorise $30x^2+9x-3$",
     			"img": "",
     			"steps": [
-      			"$30x^2+9x-3\\equiv 3(10x^2+3x-1)$"
+      			"$30x^2+9x-3\\equiv 3(10x^2+3x-1)$",
       			"$10\\times-1=-10$",
       			"Factors of $-10$ that sum to $3$ are $5$ and $-2$",
       			"Express $3x$ as $5x-2x$ so $3(10x^2+5x-2x-1$)",
