--- a/igcse.html
+++ b/igcse.html
@@ -256,6 +256,12 @@
 
         // --- DATA: 31 QUESTIONS (2025 SYLLABUS) ---
        const problemBank = [
+
+		    // JAN 30
+            {
+                q: "Find the volume of a sphere with radius 3cm.",
+                steps: ["Formula: $\\frac{4}{3}\\pi r^3$.", "$\\frac{4}{3}\\pi (27)$.", "$4 \\times 9\\pi$.", "Final Answer: $$36\\pi$$"]
+            },
            
             // JAN 31
             {
