--- a/index.html
+++ b/index.html
@@ -303,9 +303,16 @@
             },
             // FEB 2
             {
-                q: "Quadratic Inequality: Solve $x^2 - 9 > 0$.",
-                img: "quadratic_inequality.PNG",
-                steps: ["Factorise: $(x-3)(x+3) > 0$.", "Critical values: $3, -3$.", "Sketch U-shape parabola.", "Where is it ABOVE axis?", "Final Answer: $$x > 3 \\text{ or } x < -3$$"]
+               // q: "Quadratic Inequality: Solve $x^2 - 9 > 0$.",
+               // img: "quadratic_inequality.PNG",
+               // steps: ["Factorise: $(x-3)(x+3) > 0$.", "Critical values: $3, -3$.", "Sketch U-shape parabola.", "Where is it ABOVE axis?", "Final Answer: $$x > 3 \\text{ or } x < -3$$"]
+               q: `complete the square on the quadratic expression:
+                   $3x^2-6x+1$
+                   Hence write down the coordinates of the minimum point of the graph of $y=3x^2-6x+1$`,
+                steps: [
+                    "$3x^2-6x+1\\equiv 3(x^2-2x)+1$",
+                    "$\\equiv 3(x^2-2x+1) -3 + 1$",
+                    "$\\equiv 3(x-1)^2 - 2 \\Rightarrow \\text{Coordinates of minimum point are: } (1,-2)$"
             },
             // FEB 3
             {
