--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
             },
             // FEB 3
             {
-                q: "Ratio: $x:y = 1:2$ and $y:z = 3:5$. Find $x:z$.",
+                q: "Ratio: If $x:y = 1:2$ and $y:z = 3:5$. Find $x:z$.",
                 steps: ["Make $y$ consistent.", "Multiply first ratio by 3: $x:y = 3:6$.", "Multiply second ratio by 2: $y:z = 6:10$.", "Combine: $3:6:10$.", "Final Answer: $$3:10$$"]
             },
             // FEB 4
@@ -327,8 +327,8 @@
             },
             // FEB 5
             {
-                q: "Histograms: Class 0-10 Freq 5. Class 10-30 Freq 20. Which bar is taller?",
-                steps: ["Frequency Density = Freq / Width.", "Bar 1: $5 \\div 10 = 0.5$.", "Bar 2: $20 \\div 20 = 1.0$.", "1.0 is higher than 0.5.", "Final Answer: $$10-30 \\text{ is taller}$$"]
+                q: "Histograms: Class width 0-10 Frequency 5. Class width 10-30 Frequency 20. Which bar is taller?",
+                steps: ["Frequency Density = Frequency / Class width.", "Bar 1: $5 \\div 10 = 0.5$.", "Bar 2: $20 \\div 20 = 1.0$.", "1.0 is higher than 0.5.", "Final Answer: $$10-30 \\text{ is taller}$$"]
             },
             // FEB 6
             {
