--- a/index.html
+++ b/index.html
@@ -317,7 +317,8 @@
             },
             // FEB 3
             {
-                q: "Ratio: If $x:y = 1:2$ and $y:z = 3:5$. Find $x:z$.",
+                q: `Ratio: If $x:y = 1:2$ and $y:z = 3:5$. 
+                \\n Find $x:z$.`,
                 steps: ["Make $y$ consistent.", "Multiply first ratio by 3: $x:y = 3:6$.", "Multiply second ratio by 2: $y:z = 6:10$.", "Combine: $3:6:10$.", "Final Answer: $$3:10$$"]
             },
             // FEB 4
