--- a/igcse.html
+++ b/igcse.html
@@ -291,7 +291,8 @@
   			},
 			//3 Feb
   			{
-    			"q": `Jade invests €18000 at 5.25% per year compound interest.\nFind the value of her investment at the end of 10 years.
+    			"q": `Jade invests €18000 at 5.25% per year compound interest.
+				\nFind the value of her investment at the end of 10 years.
 				Give your answer to the nearest ten thousand Euros.`,
     			"img": "",
     			"steps": [
