--- a/igcse.html
+++ b/igcse.html
@@ -291,9 +291,7 @@
   			},
 			//3 Feb
   			{
-    			"q": `Jade invests €18000 at 5.25% per year compound interest.
-				\nFind the value of her investment at the end of 10 years.
-				Give your answer to the nearest ten thousand Euros.`,
+    			"q": "Jade invests €18000 at 5.25% per year compound interest.<br><br>Find the value of her investment at the end of 10 years.<br><br>Give your answer to the nearest ten thousand Euros.",
     			"img": "",
     			"steps": [
       			"$18000(1 + \\frac{5.25}{100})^{10}$",
